--- a/dashboard/src/main/resources/templates/login/index.html
+++ b/dashboard/src/main/resources/templates/login/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -38,7 +38,7 @@
                         <a class="reset_pass" href="#">Esqueceu sua senha?</a>
                     </div>
                     <div class="clearfix"></div>
-                    <div class="separator">
+                    <div class="separator">/
                         <div class="clearfix"></div>
                         <br/>
                         <div>
