Changed Template layout Added Data SQL for testes

--- a/dashboard/src/main/resources/templates/login/index.html
+++ b/dashboard/src/main/resources/templates/login/index.html
@@ -3,7 +3,6 @@
       xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -13,7 +12,7 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/fonts/css/font-awesome.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/animate.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+    <link rel="stylesheet" th:href="@{/css/gentelella.css}"/>
     <link rel="stylesheet" th:href="@{/css/icheck/flat/green.css}"/>
 
 </head>
@@ -38,7 +37,7 @@
                         <a class="reset_pass" href="#">Esqueceu sua senha?</a>
                     </div>
                     <div class="clearfix"></div>
-                    <div class="separator">/
+                    <div class="separator">
                         <div class="clearfix"></div>
                         <br/>
                         <div>
@@ -52,7 +51,7 @@
         </div>
     </div>
 </div>
-<script th:src="@{js/components/jquery.min.js}"></script>
+<script th:src="@{/js/components/jquery/jquery.min.js}"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
