--- a/dashboard/src/main/resources/templates/index.html
+++ b/dashboard/src/main/resources/templates/index.html
@@ -13,17 +13,13 @@
     <meta name="google" value="notranslate"/>
     <meta name="viewport" content="width=device-width"/>
 
-    <link rel="stylesheet" th:href="@{/components/bootstrap/dist/css/bootstrap.css}"/>
-    <link rel="stylesheet" th:href="@{/css/template/main.css}"/>
-
-    <!-- bower:css -->
-    <link rel="stylesheet" th:href="@{/components/angular-loading-bar/build/loading-bar.css}"/>
-    <link rel="stylesheet" th:href="@{/components/Ionicons/css/ionicons.css}"/>
-    <link rel="stylesheet" th:href="@{/components/components-font-awesome/css/font-awesome.css}"/>
-    <link rel="stylesheet" th:href="@{/components/Bootflat/bootflat/css/bootflat.css}"/>
-    <link rel="stylesheet" th:href="@{/components/Bootflat/bootflat/css/bootflat.min.css}"/>
-    <!-- endbower -->
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/fonts/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/animate.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/css/ace.min.css}" class="ace-main-stylesheet" id="main-ace-style"/>
+    <link rel=" tylesheet" th:href="@{/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/css/fonts.googleapis.com.css}"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:/ -->
@@ -31,41 +27,36 @@
     <script src="https:/oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https:/oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script th:src="@{/js/components/template/ace-extra.min.js}"></script>
 
-    <title>Dashboard</title>
+
+    <title>Dashboard - Dynamos</title>
 </head>
-<body  ng-app="rhinoApplication" >
-<nav class="navbar navbar-custom" ui-view="nav-header"></nav>
+<body ng-app="rhinoApplication" class="nav-md">
 
-<div class="container-fluid">
-    <div class="container">
-        <nav class="navbar navbar-grey" ui-view="top-menu"></nav>
-        <div attr="messages"></div>
+<div class="no-skin">
+    <div id="navbar" class="navbar navbar-default" ui-view="nav-header"></div>
+    <div id="main-container" class="main-container">
+        <div id="sidebar" class="sidebar responsive" ui-view="side-bar"></div>
+
+        <div class="main-content" ui-view="content"></div>
     </div>
-
-    <div class="row" ui-view="content"></div>
-
-
 </div>
 
-<!-- bower:js -->
-<script th:src="@{/components/jquery/dist/jquery.js}"></script>
-<script th:src="@{/components/angular/angular.js}"></script>
-<script th:src="@{/components/angular-cache-buster/angular-cache-buster.js}"></script>
-<script th:src="@{/components/angular-loading-bar/build/loading-bar.js}"></script>
-<script th:src="@{/components/angular-resource/angular-resource.js}"></script>
-<script th:src="@{/components/angular-sanitize/angular-sanitize.js}"></script>
-<script th:src="@{/components/json3/lib/json3.js}"></script>
-<script th:src="@{/components/ng-file-upload/ng-file-upload.js}"></script>
-<script th:src="@{/components/bootstrap/dist/js/bootstrap.js}"></script>
-<script th:src="@{/components/Bootflat/bootflat/js/icheck.min.js}"></script>
-<script th:src="@{/components/Bootflat/bootflat/js/jquery.fs.selecter.min.js}"></script>
-<script th:src="@{/components/Bootflat/bootflat/js/jquery.fs.stepper.min.js}"></script>
-<script th:src="@{/components/angular-bootstrap/ui-bootstrap-tpls.js}"></script>
-<script th:src="@{/components/ngInfiniteScroll/build/ng-infinite-scroll.js}"></script>
-<script th:src="@{/components/angular-animate/angular-animate.js}"></script>
-<script th:src="@{/components/angular-ui-router/release/angular-ui-router.js}"></script>
-<!-- endbower -->
+<script th:src="@{/js/components/angular/angular.min.js}"></script>
+<script th:src="@{/js/components/angular/angular-resource.min.js}"></script>
+<script th:src="@{/js/components/angular/angular-sanitize.min.js}"></script>
+<script th:src="@{/js/components/angular/angular-animate.min.js}"></script>
+<script th:src="@{/js/components/angular-bootstrap/ui-bootstrap-tpls-1.3.2.min.js}"></script>
+<script th:src="@{/js/components/angular-cache-buster/angular-cache-buster.js}"></script>
+<script th:src="@{/js/components/angular-loading-bar/loading-bar.min.js}"></script>
+<script th:src="@{/js/components/angular-ui-router/angular-ui-router.min.js}"></script>
+<script th:src="@{/js/components/angular-ng-file-upload/ng-file-upload.min.js}"></script>
+<script th:src="@{/js/components/json/json3.min.js}"></script>
+<script th:src="@{/js/components/jquery/jquery.min.js}"></script>
+<script th:src="@{/js/components/bootstrap/bootstrap.min.js}"></script>
+<script th:src="@{/js/components/template/ace-elements.min.js}"></script>
+<script th:src="@{/js/components/template/ace.min.js}"></script>
 
 
 <script type="text/javascript" src="js/dist/app.js"></script>
