--- a/dashboard/src/main/resources/templates/login/index.html
+++ b/dashboard/src/main/resources/templates/login/index.html
@@ -7,19 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Dynamos Commerce | </title>
+    <title>Dynamos Commerce  </title>
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/fonts/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/animate.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/gentelella.css}"/>
-    <link rel="stylesheet" th:href="@{/css/icheck/flat/green.css}"/>
-
+    <link rel="stylesheet" th:href="@{/fonts/css/font-awesome.css}"/>
+    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+    <link rel=" tylesheet" th:href="@{/css/normalize.css}"/>
 </head>
 
 <body style="background:#F7F7F7;">
 
-<div class="">
+<div class="login_wrapper">
     <div id="wrapper">
         <div id="login" class="animate form">
             <section class="login_content">
