--- a/dashboard/src/main/resources/templates/layout.html
+++ b/dashboard/src/main/resources/templates/layout.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <base href="/"/>
+    <base th:href="@{/}"/>
 
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="description" content=""/>
-    <meta name="google" value="notranslate"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/fonts/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+    <link rel="stylesheet" th:href="@{/css/font-awesome.css}"/>
     <link rel=" tylesheet" th:href="@{/css/normalize.css}"/>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:/ -->
-    <!--[if lt IE 9]>
-    <script src="https:/oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https:/oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script th:src="@{/js/components/template/ace-extra.min.js}"></script>
-
+    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
 
     <title>Dashboard - Dynamos</title>
 </head>
@@ -34,8 +22,11 @@
 <div class="container body">
     <div class="main_container">
         <div class="col-md-3 left_col" th:include="side-bar"></div>
+
         <div class="top_nav" th:include="nav-header"></div>
+
         <div class="right_col" role="main" layout:fragment="content"></div>
+
         <footer>
             <div class="pull-right">
                 Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
@@ -45,21 +36,19 @@
     </div>
 </div>
 
+<!--
 <script th:src="@{/js/components/angular/angular.min.js}"></script>
 <script th:src="@{/js/components/angular/angular-resource.min.js}"></script>
 <script th:src="@{/js/components/angular/angular-sanitize.min.js}"></script>
 <script th:src="@{/js/components/angular/angular-animate.min.js}"></script>
 <script th:src="@{/js/components/angular-bootstrap/ui-bootstrap-tpls-1.3.2.min.js}"></script>
 <script th:src="@{/js/components/angular-cache-buster/angular-cache-buster.js}"></script>
-<script th:src="@{/js/components/angular-loading-bar/loading-bar.min.js}"></script>
-<script th:src="@{/js/components/angular-ui-router/angular-ui-router.min.js}"></script>
-<script th:src="@{/js/components/angular-ng-file-upload/ng-file-upload.min.js}"></script>
-<script th:src="@{/js/components/json/json3.min.js}"></script>
+<script th:src="@{/js/components/angular-ng-file-upload/ng-file-upload.min.js}"></script>-->
+
 <script th:src="@{/js/components/jquery/jquery.min.js}"></script>
+<script th:src="@{/js/components/jquery/jquery.mCustomScrollbar.js}"></script>
 <script th:src="@{/js/components/bootstrap/bootstrap.min.js}"></script>
-
-
-<script type="text/javascript" src="js/dist/app.js"></script>
+<script th:src="@{/js/components/template/custom.js}"></script>
 
 </body>
 </html>
