--- a/panel/src/main/resources/public/views/sidebar.html
+++ b/panel/src/main/resources/public/views/sidebar.html
@@ -2,7 +2,10 @@
     <nav class="sidebar-nav">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="dashboard"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="dashboard"><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="manufacturer"><i class="fa fa-industry" aria-hidden="true"></i> Manufacturer</a>
             </li>
         </ul>
     </nav>
