--- a/panel/src/main/resources/public/views/sidebar.html
+++ b/panel/src/main/resources/public/views/sidebar.html
@@ -7,6 +7,9 @@
             <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="manufacturer"><i class="fa fa-industry" aria-hidden="true"></i> Manufacturer</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="manufacturer"><i class="fa fa-shopping-bag" aria-hidden="true"></i>Product</a>
+            </li>
         </ul>
     </nav>
 </div>
