--- a/panel/src/main/resources/static/css/main.css
+++ b/panel/src/main/resources/static/css/main.css
@@ -1,2 +1,19 @@
 @import "util.css";
 @import "buttons.css";
+@import "table.css";
+@import "components.css";
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic,300italic,300);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800);
+
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    line-height: 1.42857143;
+    color: #696c74;
+    background-color: #d8dce3;
+}
+
+[role="button"] {
+    cursor: pointer;
+}
