--- a/panel/src/main/resources/public/views/navbar.html
+++ b/panel/src/main/resources/public/views/navbar.html
@@ -1,6 +1,7 @@
 <header class="app-header navbar">
-    <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">&#9776;</button>
-    <a class="navbar-brand" ui-sref="app.main"></a>
+    <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" role="button" type="button">&#9776;</button>
+    <a class="navbar-brand" ui-sref="dashboard">
+    </a>
     <ul class="nav navbar-nav d-md-down-none">
         <li class="nav-item">
             <a class="nav-link navbar-toggler sidebar-toggler" href="#">&#9776;</a>
@@ -55,9 +56,5 @@
                 <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
             </div>
         </li>
-        <li class="nav-item">
-            <a class="nav-link navbar-toggler aside-menu-toggler" href="#">&#9776;</a>
-        </li>
-
     </ul>
 </header>
