--- a/panel/src/main/resources/public/views/sidebar.html
+++ b/panel/src/main/resources/public/views/sidebar.html
@@ -4,11 +4,14 @@
             <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="dashboard"><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a>
             </li>
+            <li class="nav-title">
+                Products
+            </li>
             <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="manufacturer"><i class="fa fa-industry" aria-hidden="true"></i> Manufacturer</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="manufacturer"><i class="fa fa-shopping-bag" aria-hidden="true"></i>Product</a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="product"><i class="fa fa-shopping-bag" aria-hidden="true"></i>Product</a>
             </li>
         </ul>
     </nav>
