--- a/panel/src/main/resources/public/views/sidebar.html
+++ b/panel/src/main/resources/public/views/sidebar.html
@@ -4,7 +4,7 @@
             <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="dashboard"><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a>
             </li>
-            <li class="nav-title">
+            <li class="nav-name">
                 Products
             </li>
             <li class="nav-item">
@@ -12,6 +12,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="product"><i class="fa fa-shopping-bag" aria-hidden="true"></i>Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="product-category"><i class="fa fa-cubes" aria-hidden="true"></i>Product Category</a>
             </li>
         </ul>
     </nav>
